fix loader-block z-index

--- a/src/ui/loaderBlock/loaderBlock.module.scss
+++ b/src/ui/loaderBlock/loaderBlock.module.scss
@@ -4,7 +4,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    z-index: $z-splash;
+    z-index: $z-modal;
     display: flex;
     justify-content: center;
     align-items: center;
